Verif/Test/Invalide/test_erreur_3.44.deca
// Description:
//    Programme soulevant l'erreur (3.44)
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Les types 'int' et 'float' sont incompatibles pour l'affectation (règle 3.44)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 12/01/2012

int x = 1.0 ;
{
}